# NoesisCLI

./: .env.example  .gitignore  Project_Vision.md  README.md  implementation.md  main.py  pyproject.toml  requirements.txt
docs/: docs_pruner.md  docs_tree_sitter.md
noesiscli/: __init__.py  cli.py  config.py
noesiscli/indexing/: __init__.py  bm25_store.py  embedding.py  vector_store.py
noesiscli/models/: __init__.py  client.py
noesiscli/parser/: __init__.py  dependency_graph.py  parallel.py  scanner.py  symbol_table.py  tree_sitter_parser.py
noesiscli/pipeline/: __init__.py  direct.py  graph.py  rag.py  router.py  state.py  validation.py
noesiscli/retrieval/: __init__.py  fusion.py  pruner.py
noesiscli/utils/: __init__.py  persistence.py  ui.py
tests/: conftest.py  test_indexing.py  test_models.py  test_parser.py  test_pipeline.py  test_retrieval.py
