[project]
name = "noesiscli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langgraph>=1.2.6",
    "networkx>=3.6.1",
    "onnxruntime>=1.27.0",
    "optimum>=2.2.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "rich>=15.0.0",
    "tokenizers>=0.22.2",
    "transformers>=5.12.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
]
