[project]
name = "noesiscli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langgraph>=1.2.6",
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "rich>=15.0.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "voyageai>=0.4.1",
]
